--- a/scripts/popup.html
+++ b/scripts/popup.html
@@ -4,95 +4,16 @@
 <head>
   <title>Email Extractor</title>
   <script src="popup.js"></script>
-  <style>
-    body {
-      font-family: Open Sans, Arial;
-      font-weight: 400;
-      width: 230px;
-      height: 315px;
-      padding: 0 0 10px;
-      color: #515151;
-      font-size: 16px;
-    }
-
-    h1 {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-
-    #totalEmails {
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-
-    #emailList {
-      height: 200px;
-      overflow-y: auto;
-      border: 1px solid #ccc;
-      padding: 5px;
-      margin-bottom: 10px;
-      font-size: 12px;
-    }
-
-    .btn {
-      margin: 0;
-      padding: 0;
-      align-items: center;
-    }
-
-    button {
-      margin-right: 5px;
-      font-size: 11px;
-    }
-
-    /* CSS */
-    .button-3 {
-      background-color: #2ea44f;
-      border: 1px solid rgba(27, 31, 35, 0.15);
-      border-radius: 6px;
-      box-sizing: border-box;
-      color: #fff;
-      font-weight: 600;
-      cursor: pointer;
-      display: inline-block;
-      position: relative;
-      text-align: center;
-      touch-action: manipulation;
-      vertical-align: middle;
-      white-space: nowrap;
-    }
-
-    .button-3:focus:not(:focus-visible):not(.focus-visible) {
-      box-shadow: none;
-      outline: none;
-    }
-
-    .button-3:hover {
-      background-color: #2c974b;
-    }
-
-    .button-3:focus {
-      box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
-      outline: none;
-    }
-
-    .button-3:disabled {
-      background-color: #94d3a2;
-      border-color: rgba(27, 31, 35, 0.1);
-      color: rgba(255, 255, 255, 0.8);
-      cursor: default;
-    }
-
-    .button-3:active {
-      background-color: #298e46;
-      box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
-    }
-  </style>
+  <link rel="stylesheet" href="/scripts/style.css">
 </head>
 
 <body>
-  <h1>Email Extractor</h1>
-  <div id="totalEmails">Total Emails: 0</div>
+
+  <div id="top">
+    <img src="/images/icon48.png" alt="" width="16px" height="16px" id="topimg">
+    <span id="totalEmails">Total Emails: 0</span>
+  </div>
+  
   <div id="emailList"></div>
 
   <div class="btn">
